--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,10 @@
     <%= javascript_pack_tag 'application' %>
   </head>
 
-  <body>
+  <body style="background-color: <%= prefered_color %>">
     <%= render 'layouts/navigation' %>
     <%= render 'layouts/messages' %>
     <div class="container">
-      <%#= react_component("HelloWorld", { greeting: "Hi!!" }) %>
       <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
